# fcm2up

./: .gitignore  Cargo.toml  flake.nix
bridge/: Cargo.toml  flake.nix  module.nix
bridge/src/: db.rs  fcm.rs  main.rs
fcm-listener/: Cargo.toml
fcm-listener/src/: error.rs  gcm.rs  lib.rs  push.rs
fcm-listener/src/proto/: android_checkin.proto
patcher/: Cargo.toml
patcher/src/: apk.rs  extract.rs  main.rs  manifest.rs  patch.rs
shim/: build.gradle.kts  build.sh  consumer-rules.pro  deps.json  fcm2up-shim.dex  flake.nix  proguard-rules.pro  settings.gradle.kts
shim/smali/a/: a.smali  b.smali
shim/smali/com/fcm2up/: Fcm2UpReceiver$Companion.smali  Fcm2UpReceiver.smali  Fcm2UpShim$$ExternalSyntheticBackport0.smali  Fcm2UpShim$$ExternalSyntheticLambda0.smali  Fcm2UpShim$$ExternalSyntheticLambda1.smali  Fcm2UpShim.smali
shim/smali/kotlin/jvm/internal/: Intrinsics.smali  Reflection.smali
shim/src/main/kotlin/com/fcm2up/: Fcm2UpReceiver.kt  Fcm2UpShim.kt
