[package]
name = "fcm2up-bridge"
version = "0.1.0"
edition = "2021"
description = "FCM-to-UnifiedPush bridge server. Receives FCM messages and forwards to ntfy/UnifiedPush."
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# FCM listener (local crate)
fcm-listener = { path = "../fcm-listener" }

# HTTP server & client
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Futures utilities
futures-util = "0.3"

# Storage
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
