[package]
name = "fcm-listener"
version = "0.1.0"
edition = "2021"
description = "Listen for FCM messages as an Android device"
license = "MIT"
repository = "https://github.com/amaanq/fcm2up"

[lib]
name = "fcm_listener"
path = "src/lib.rs"

[dependencies]
bytes = "1.10"
pin-project-lite = "0.2"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"], default-features = false }
tokio-rustls = "0.26"
tokio-stream = "0.1"
tracing = "0.1"
webpki-roots = "0.26"

[build-dependencies]
prost-build = "0.13"
