[package]
name = "fcm-listener"
version = "0.1.0"
edition = "2021"
description = "Listen for FCM messages as an Android device"
license = "MIT"
repository = "https://github.com/amaanq/fcm2up"

[lib]
name = "fcm_listener"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
ece = "2.3"
bytes = "1.10"
flate2 = "1.0"
pin-project-lite = "0.2"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"], default-features = false }
tokio-rustls = "0.26"
tokio-stream = "0.1"
tracing = "0.1"
urlencoding = "2.1"
webpki-roots = "0.26"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.13"
