[package]
name = "fcm2up-patcher"
version = "0.1.0"
edition = "2021"
description = "Patch Android APKs to use UnifiedPush instead of FCM"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
anyhow = "1"
dirs = "5"
zip = "2"
